--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,68 +4,149 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E2D3FDB6"
+    android:background="#7559347E"
     android:foregroundGravity="center"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/principallog"
+        android:layout_width="410dp"
+        android:layout_height="268dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/principallog"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.017"
+        app:srcCompat="@drawable/Principal"
+        tools:ignore="ImageContrastCheck" />
+
+    <TextView
+        android:id="@+id/iniciose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alfa_slab_one"
+        android:foregroundGravity="center"
+        android:gravity="center|clip_vertical"
+        android:text="@string/iniciar_sesion"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/principallog"
+        app:layout_constraintVertical_bias="0.396" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
+        android:backgroundTint="#000000"
+        android:ems="10"
+        android:gravity="start"
+        android:hint="@string/correo_electronico"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName"
+        android:text="@string/usuario"
+        android:textColorHint="#88FFFFFF"
+        android:textStyle="normal|italic"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/principallog"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="#000000"
+        android:ems="10"
+        android:gravity="start"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName"
+        android:text="@string/contras"
+        android:textStyle="normal|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/btnaccerder"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginEnd="110dp"
+        android:backgroundTint="#7C72D818"
+        android:text="@string/acceder"
+        android:textColor="#22201F"
+        android:textSize="16sp"
+        android:textStyle="normal|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+        app:layout_constraintVertical_bias="0.262"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <ImageView
-            android:id="@+id/imaglog"
-            android:layout_width="match_parent"
-            android:layout_height="251dp"
-            android:contentDescription="@string/imaglogin"
-            app:srcCompat="@drawable/Principal"
-            tools:ignore="ImageContrastCheck" />
+    <Button
+        android:id="@+id/btnregis"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:backgroundTint="#7C72D818"
+        android:text="@string/registrarme"
+        android:textColor="#22201F"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+        app:layout_constraintVertical_bias="0.493"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <TextView
-            android:layout_width="395dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/alfa_slab_one"
-            android:gravity="center"
-            android:text="@string/txtregistro"
-            android:textColor="#000000"
-            android:textSize="20sp"
-            android:textStyle="normal|bold|italic" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp" />
 
-        <TextView
-            android:id="@+id/txtusuario"
-            android:layout_width="376dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif-smallcaps"
-            android:text="@string/nombre_de_usuario"
-            android:textAlignment="textStart"
-            android:textColor="#0C0C0C"
-            android:textStyle="bold" />
+    <CheckBox
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recordarme"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnaccerder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.142"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+        app:layout_constraintVertical_bias="0.304"
+        tools:ignore="TouchTargetSizeCheck" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="37dp" />
-
-        <TextView
-            android:id="@+id/txtcontra"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textAlignment="textStart"
-            android:textColor="#0C0C0C"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="41dp"
+        android:layout_height="27dp"
+        android:layout_marginBottom="16dp"
+        android:indeterminateTint="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
