--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/principallog"
-        android:layout_width="410dp"
-        android:layout_height="268dp"
+        android:layout_width="416dp"
+        android:layout_height="263dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/principallog"
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.017"
-        app:srcCompat="@drawable/Principal"
+        app:srcCompat="@drawable/principal"
         tools:ignore="ImageContrastCheck" />
 
     <TextView
@@ -92,6 +92,7 @@
         android:layout_marginStart="110dp"
         android:layout_marginEnd="110dp"
         android:backgroundTint="#7C72D818"
+        android:onClick="acceder"
         android:text="@string/acceder"
         android:textColor="#22201F"
         android:textSize="16sp"
@@ -137,16 +138,5 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
         app:layout_constraintVertical_bias="0.304"
         tools:ignore="TouchTargetSizeCheck" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="41dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="16dp"
-        android:indeterminateTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
