--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="394dp"
+        android:layout_height="113dp"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="231dp"
+        android:layout_marginBottom="215dp"
         android:fontFamily="@font/alfa_slab_one"
         android:foregroundGravity="center"
         android:text="@string/tituloini"
@@ -35,7 +35,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="177dp"
-        android:layout_marginBottom="134dp"
+        android:layout_marginBottom="114dp"
         android:indeterminateTint="#B37744"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +60,8 @@
         android:id="@+id/splash"
         android:layout_width="match_parent"
         android:layout_height="397dp"
-        android:contentDescription="TODO"
-        android:src="@drawable/principal" />
+        android:contentDescription="@string/splash2"
+        android:src="@drawable/principal"
+        tools:ignore="ImageContrastCheck" />
 
 </RelativeLayout>
